2.3.4 (2019042009)
Bug: Fix for issue with wrong role ids in Website Administration (CONTRIB-8047).
Bug: Fix for issue with notification when activity is updated not respecting enrolment status (CONTRIB-8046).
Bug: Fix for issue with BigBlueButton notifications include the sender email-address (CONTRIB-8042).
Bug: Fix for issue with administrator and manager-role cannot see recordings when groups are used (CONTRIB-8038).
Bug: Fix for issue with closingtime shown on the Dashboard if it isn't set in the activity instance (CONTRIB-8158).
Bug: Fix for issue with performance on view (CONTRIB-8157).
Bug: Fix for issue with BBB incorrectly distributes moderator rights to student-role (CONTRIB-7627).
Bug: Fix for issue with meeting name is not required in the recording list (CONTRIB-7703).
Bug: Fix for issue with imported recordings shows all the "Imported recordings" in the course (CONTRIB-7961).
Enhancement: Added option for turn off sending notifications when recording ready feature. (CONTRIB-8026).